# server-client-auth

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  TODO.md  doc.html.lnk  test.conf
CMake/: FindGTestLocal.cmake  README.txt
ClientTest/: ClientTest.vcxproj  Main.cpp  cacert.pem
ClientTest/Debug/: ClientTest.vcxprojResolveAssemblyReference.cache  vc120.idb
ClientTest/Debug/ClientTest.tlog/: CL.read.1.tlog  CL.write.1.tlog  ClientTest.lastbuildstate  cl.command.1.tlog
client/: CMakeLists.txt  SslAuthClientDll.cpp  SslClientAuthDll.h
dependencies/util/config/: ConfigException.h  ConfigFactory.h  ConfigReader.h  IConfigClass.h
dependencies/util/hash/: Hash.h
include/: sca_platformtype.h
include/client/: SslClientAuthDll.h
include/sql/: sqlOp.h
include/util/config/: ConfigClass.h  ConfigReader.h
server/: CMakeLists.txt  Connection.cpp  Connection.hpp  DbConnection.cpp  DbConnection.h  connectionmanager.h  server.cpp
sqliteInterface/: CMakeLists.txt  Singleton.h  SqlDll.h  sqlOp.cpp  sqlOp.h  sqlite3.h
testSql/: ReadMe.txt  stdafx.cpp  testSql.cpp  testSql.vcxproj  testSql.vcxproj.filters
tests/: CMakeLists.txt
tests/endurance_test_sca/: CMakeLists.txt  endurance_test_sca.cpp
tests/readconfig_test/: CMakeLists.txt  test_configuration_reader.cpp  testincorect.conf  testmalformed.conf
util/: CMakeLists.txt
util/config/: CMakeLists.txt  ConfigClass.cpp  ConfigClass.h  ConfigException.cpp  ConfigException.h  ConfigFactory.h  ConfigReader.cpp  ConfigReader.h  IConfigClass.h  cmake_install.cmake  config.vcxproj  config.vcxproj.filters  config_reader_build_opts.h  util_build_opts.h
util/hash/: Hash.cpp  Hash.h
